Fixed modal misalignment when menu is collapsed

--- a/app/style/Modals.less
+++ b/app/style/Modals.less
@@ -41,7 +41,10 @@
 }
 
 .app-modal-reduced-bar {
-  left: 60px;
+  margin: auto;
+  left: 0;
+  width: 540px !important;
+  margin-top: 172px !important;
 }
 
 .app-modal-standalone {
@@ -50,6 +53,7 @@
 
 .app-modal.info-modal,
 .app-modal.confirm-modal,
+.app-modal-reduced-bar.confirm-modal,
 .app-modal-reduced-bar.info-modal,
 .app-modal-standalone.info-modal,
 .pseudo-modal.info-modal, {
